correct the z-index of warning box

--- a/styles.css
+++ b/styles.css
@@ -34,11 +34,13 @@ body {
     top: 70%;
     left: 50%;
     transform: translate(-50%);
-    font-size: 16px;
+    font-size: 24px;
     display: none;
     border: 1px solid rgba(249, 20, 20, 0.562);
     background-color: rgba(249, 20, 20, 0.562);
     border-radius: 5px;
+    color: white;
+    z-index: 3;
 }
 
 .container .input {
